feat: complete scalable village ecology foundation